views/style.css
@media (max-device-width: 480px) {
    .main-frame {
        width: 100% !important;
    }

    .animediv {
        height: 400px !important;
        width: 200px !important;
    }

    .thumbdiv {
        width: 200px !important;
        height: 300px !important;
    }

    .linked {
        font-size: 28 !important;
        overflow: hidden;
        text-overflow: ellipsis;
        display: -webkit-box;
        -webkit-line-clamp: 2;
        line-clamp: 2;
        -webkit-box-orient: vertical;
    }

    .fvfTabBoxeA {
        height: 75 !important;
        width: 75 !important;
        font-size: 24px !important;
    }

    .seen {
        background-color: #466eb461 !important;
    }

    .fvfTabBoxes {
        height: 75 !important;
        width: 75 !important;
        font-size: 24px !important;
    }

    .sbdivhelper {
        height: 200 !important;
    }

    .searchbar {
        width: 350px !important;
        height: 60px !important;
        font-size: 22px !important;
    }

    .headerdivshelper {
        height: 200px !important;
    }

    .logoh1 {
        font-size: px !important;
    }

    .animetitleps {
        font-size: 42px !important;
        padding-left: 50;
        padding-right: 50;
        word-break: break-all;
        white-space: normal !important;
    }

    .headframe-eps {
        flex-direction: column !important;
        align-items: center !important;
    }

    .animethumb {
        width: 80% !important;
        height: auto !important;
    }

    .sfAnime {
        font-size: 14px !important;
    }

    .epboxvs {
        height: 100px !important;
        width: 100px !important;
    }

    .eplist {
        width: 90% !important;
    }

    .srb {
        width: 100% !important;
        left: 0 !important;
        margin-left: 0 !important;
        top: 192px !important;
    }

    .minithumbdiv {
        width: 200px !important;
        height: 300px !important;
    }

    .animetitlepsinres {
        font-size: 27px !important;
        padding-left: 50;
        padding-right: 50;
        word-break: break-all;
        white-space: normal !important;
    }

    .anime-result-div {
        margin: 10 !important;
        flex-wrap: wrap !important;
    }

    .nav-frame {
        height: 150px !important;
    }

    .w-400-norm {
        width: 33% !important;
    }

    .wide-nav-bar {
        display: none !important;
    }

    .thin-nav-bar {
        display: inherit !important;
    }

    .ui-name-logo {
        width: 100 !important;
        height: 100 !important;
        font-size: 30px !important;
    }
}

body {
    margin: 0;
    background-color: black;
    overflow-y: scroll;
}

.wide-nav-bar {
    display: inherit;
}

.thin-nav-bar {
    display: none;
}

.main-frame {
    margin-top: -80px !important;
    max-width: 1000px;
    width: 100%;
    background-color: #1c1c1c;
    overflow: visible;
    margin: auto;
    padding: 0;
    min-height: 100%;
}

.nav-frame-hollow {
    width: 100%;
    margin: 0;
    padding: 0;
    height: 80px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: center;
    align-items: flex-start;
}

.nav-frame {
    z-index: 4;
    background-color: #1c1c1c;
    position: fixed;
    width: 100%;
    padding: 0;
    height: 80px;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
}

.nav-side-frame {
    height: 80px;
    background-color: #1C1C1C;
    flex: auto;
}

.nav-center-frame {
    width: 800px;
    height: 80px;
    background-color: #1C1C1C;
}

.headframe-eps {
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-wrap: nowrap;
}

.h10 {
    height: 10;
}

.h15 {
    height: 15;
}

.h25 {
    height: 25;
}

.h50 {
    height: 50;
}

.h100 {
    height: 100;
}

.h200 {
    height: 200;
}

.headerdivshelper {
    height: 150;
    display: table
}

input,
select,
textarea {
    color: #ffffff;
}

p {
    margin: auto;
}

.sbdivhelper {
    display: flex;
    place-items: center;
    height: 0;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: flex-start;
    justify-content: center;
    align-items: flex-start;
}

.logoh1 {
    font-weight: 900;
    font-family: 'Plus Jakarta Sans', sans-serif;
    color: #5585d5;
    font-size: 55px;
    text-align: left;
    vertical-align: middle;
    margin: 0px !important;
    margin-left: 15px !important;
}

.searchbar {
    box-sizing: border-box;
    width: 350px;
    height: 40px;
    background-color: #000000;
    overflow: visible;
    border-radius: 5px;
    border: 1px solid #122f613b;
    display: block;
}

.fvfDivFrame {
    display: flex;
    justify-content: center;
}

a {
    text-decoration: none;
    color: #ffffff;
}

.fvfTabBoxes {
    background-color: transparent;
    height: 35;
    width: 35;
    margin: 0;
    padding: 0;
    text-align: center;
    vertical-align: middle;
    text-decoration: none;
    white-space: pre;
    font-weight: 700;
    font-family: 'Inter-Bold', 'Inter', sans-serif;
    color: #ffffff !important;
    font-size: 24px;
    letter-spacing: 0px;
    line-height: 1.2;
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: center;
}

.fvfTabBoxeA {
    background-color: #5585d5;
    height: 35;
    width: 35;
    margin: 0;
    padding: 0;
    text-align: center;
    vertical-align: middle;
    text-decoration: none;
    white-space: pre;
    font-weight: 700;
    font-family: 'Inter-Bold', 'Inter', sans-serif;
    color: #ffffff !important;
    font-size: 24px;
    letter-spacing: 0px;
    line-height: 1.2;
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    border: 1px solid transparent;
    ;
}

.seen {
    background-color: #466eb461 !important;
}

.animegridview {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-content: space-around;
    justify-content: space-around;
    align-items: center;
}

.animediv {
    height: 300;
    width: 170px;
    word-wrap: break-word;
    text-align: center;
    color: white;
}

.thumbdiv {
    width: 170px;
    height: 230px;
    background-color: #5585d5;
    overflow: visible;
    border-radius: 5px;
}

.minithumbdiv {
    width: 50;
    height: 75;
    background-color: #5585d5;
    overflow: visible;
    border-radius: 5px;
}

.linked {
    font-family: 'Inter-Bold', 'Inter', sans-serif;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    line-clamp: 2;
    -webkit-box-orient: vertical;
}

.animetitleps {
    width: auto;
    height: auto;
    white-space: pre;
    font-family: 'Inter', sans-serif;
    color: #ffffff;
    font-size: 36px;
    letter-spacing: 0px;
    line-height: 1.2;
    text-align: center;
    padding: 0 50 0 50;
    word-break: break-all;
    white-space: normal !important;
}

.animethumb {
    width: 300px;
    height: 400px;
    background-color: #5585d5;
    overflow: visible;
    border-radius: 5px;
    margin-left: 20;
}

.sfAnime {
    max-width: 600;
    margin: 0 20;
    color: white;
    font-size: 18px;
    text-align: center;
}

.epboxvs {
    background-color: transparent;
    height: 50;
    width: 50;
    margin: 2 auto;
    padding: 0;
    text-align: center;
    vertical-align: middle;
    text-decoration: none;
    white-space: pre;
    font-weight: 700;
    font-family: 'Inter-Bold', 'Inter', sans-serif;
    color: #ffffff !important;
    font-size: 24px;
    letter-spacing: 0px;
    line-height: 1.2;
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    border-radius: 5px;
    border: 1px solid #5585d5;
}

.eplist {
    margin: auto;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-content: space-around;
    justify-content: space-around;
    align-items: center;
    max-width: 800px;
}

.wframe {
    margin: auto;
    overflow: visible;
    border-radius: 5px;
}

.extend-h-tab {
    display: flex;
    justify-content: space-between;
    padding: 0 50 0 50;
}

.srb {
    position: absolute;
    z-index: 2;
    width: 100%;
    max-width: 1000px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    overflow: visible;
    background-color: #1c1c1ce6;
}

.hidden {
    display: none;
}

.anime-result-div {
    max-width: 965px;
    width: 100%;
    display: flex;
    margin: 5px !important;
    padding: 5px !important;
    background-color: #1c1c1c;
    border-radius: 10px;
}

.anime-a-post {
    width: 100%;
}

.animetitlepsinres {
    width: auto;
    height: auto;
    white-space: pre;
    font-family: 'Inter', sans-serif;
    color: #ffffff;
    font-size: 16px;
    letter-spacing: 0px;
    line-height: 1.2;
    text-align: left;
    margin-bottom: 3;
    margin-left: 5;
    padding: 0 50 0 50;
    word-break: break-all;
    white-space: normal !important;
}

.vlistact {
    width: 300px;
    margin: 5px;
}

.tx-left {
    text-align: left;
}

.tx-center {
    text-align: center;
}

.tx-right {
    text-align: right;
}

::-webkit-scrollbar {
    width: 3px;
}

::-webkit-scrollbar-track {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: #5585d5;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background: #5585d5;
}

.ui-name-logo {
    transition: ease;
    transition-duration: 500ms;
    background-color: #414141;
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: center;
    width: 60;
    height: 60;
    border-radius: 100px;
    font-family: 'Plus Jakarta Sans', sans-serif;
    font-size: 18px;
    color: white;
    margin: 0px !important;
    margin-right: 15px !important;
}

.i-primary-50 {
    background-color: #5585d5;
    border: 0px solid green;
    border-radius: 5px;
    width: 150;
    height: 50;
    font-size: 26px;
    text-align: center;
    color: white !important;
}

.w-400-norm {
    width: 400px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.w-400-left {
    justify-content: left !important;
}

.w-400-center {
    justify-content: center !important;
}

.w-400-right {
    justify-content: right !important;
}

.regFormParent{
    width: 100%;   
}

.regFormBox {
    background-color: #1c1c1c;
    margin: auto;
    width: 300;
    padding: 10px;
    border-radius: 15px;
}

